--- a/stylized.html
+++ b/stylized.html
@@ -5,11 +5,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HTML5 Basic Elements</title>
+	<title>HTML5 Basic Elements - stylized</title>
+
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
-
 	<nav>
 		<a href="index.html">Basic</a> |
 		<a href="stylized.html">Stylized</a>
@@ -164,9 +166,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<!-- Image -->
 	<section>
 		<h2>Image</h2>
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/ENIAC-changing_a_tube.jpg/800px-ENIAC-changing_a_tube.jpg" alt="" />
+		<img width="400" class="rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/ENIAC-changing_a_tube.jpg/800px-ENIAC-changing_a_tube.jpg" alt="" />
 	</section>
 
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
